Zmiana ikonek z png na svg + zmiana obslugi ikonek na svg + korzystanie z rsvg + dodanie inicjalizacji i rysowania drop_zones

--- a/admin/CMakeLists.txt
+++ b/admin/CMakeLists.txt
@@ -39,12 +39,16 @@ ADD_EXECUTABLE(simulator_scr ${sources_simulator})
 ADD_EXECUTABLE(driver_scr ${sources_driver})
  
 INCLUDE(FindPkgConfig)
+
 PKG_SEARCH_MODULE(GTK REQUIRED gtk+-2.0)
 PKG_SEARCH_MODULE(GTHREAD REQUIRED gthread-2.0)
+PKG_SEARCH_MODULE(RSVG REQUIRED librsvg-2.0)
+
 INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${GTHREAD_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${RSVG_INCLUDE_DIRS})
 
 FIND_PACKAGE(Threads)
 
-TARGET_LINK_LIBRARIES(simulator_scr ${GTK_LIBRARIES} ${GTHREAD_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} cairo config tpl)
+TARGET_LINK_LIBRARIES(simulator_scr ${GTK_LIBRARIES} ${GTHREAD_LIBRARIES} ${RSVG_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} cairo config tpl)
 TARGET_LINK_LIBRARIES(driver_scr ${CMAKE_THREAD_LIBS_INIT} config tpl)
